@@ -1,5 +1,11 @@
 2006-12-07  Aaron Bockover  <abock@gnome.org>
 
+	* src/Banshee.Widgets/SearchEntry.cs: Set the base style on the action
+	icons in the search entry when the style has been fully set on the
+	entry (BGO #321773)
+
+2006-12-07  Aaron Bockover  <abock@gnome.org>
+
 	* src/PlaylistModel.cs: Save/restore the sort ID from the active source
 	Fixes BGO #353125.
 
